--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,3 +104,58 @@ img.resize {
     padding: 2px;
     box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
 }
+
+.footer
+{
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footer ul
+{
+    list-style-type:none;
+}
+
+.about-us
+{
+    /* box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19); */
+    flex: 0 1 calc(20% - 1em);
+    margin: .2%
+}
+
+.recent-review
+{
+    /* box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19); */
+    flex: 0 1 calc(15% - 1em);
+    margin: .2%
+}
+
+.help-center
+{
+    /* box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19); */
+    flex: 0 1 calc(15% - 1em);
+    margin: .2%
+}
+
+.join-us
+{
+    /* box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19); */
+    flex: 0 1 calc(15% - 1em);
+    margin: .2%
+}
+
+.social-media
+{
+    /* box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19); */
+    flex: 0 1 calc(14% - 1em);
+    margin: .2%
+}
+
+.newsletter
+{
+    /* box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19); */
+    flex: 0 1 calc(14% - 1em);
+    margin: .2%
+}
